<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Main_Menu">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:backgroundTint="#F0E5C6"
        android:drawableLeft="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:padding="10dp"
        android:text="@string/play"
        android:textColor="#964B00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:backgroundTint="#F0E5C6"
        android:drawableLeft="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:padding="10dp"
        android:text="@string/load_game"
        android:textColor="#964B00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:backgroundTint="#F0E5C6"
        android:drawableLeft="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:padding="10dp"
        android:text="@string/how_to_play"
        android:textColor="#964B00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:backgroundTint="#F0E5C6"
        android:drawableLeft="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:padding="10dp"
        android:text="@string/options"
        android:textColor="#964B00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:backgroundTint="#F0E5C6"
        android:drawableLeft="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:padding="10dp"
        android:text="@string/credits"
        android:textColor="#964B00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />


</androidx.constraintlayout.widget.ConstraintLayout>